# rust-tieng-viet.github.io

./: .editorconfig  .gitattributes  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ISSUE_SUMMARY.md  LICENCE  PULL_REQUEST_SUMMARY.md  README.md  book.toml  dev.sh  index.html  lib.rs  pageview.js  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex.js  searchindex.json  sitemap.txt  sitemap.xml  toc-12f21e70.js  toc-726ef669.js  toc-b3a836bf.js  toc-d2455f51.js  toc.html  toc.js  who-is-using.html
.github/: renovate.json
advanced/: box.html  cow.html  rc.html  saturating.html
basic/: attr.html  box.html  closure.html  code-comment.html  copy-clone.html  cow.html  expect.html  fromstr.html  if_let_some.html  option-result.html  option.html  ownership.html  question-mark.html  result-to-option.html  result.html  struct.html  trait.html  turbofish.html  unwrap.html  unwrap_or_default.html  variables.html
crates/: actix-web.html  anyhow.html  async_trait.html  chrono.html  clap.html  config.html  indoc.html  lazy_static.html  polars.html  rayon.html  regex.html  serde.html  serde_json.html  tokio.html
data-engineering/: data-driven.html  data-processing.html  first-data-pipeline.html  rust-as-alternative-python.html
getting-started/: first-project.html  installation.html  rust-playground.html
html/: index.html  print.html  searchindex.js  searchindex.json
idioms/: aim-for-immutability.html  borrowed-types.html  constructor.html  default-trait.html  error-handling-patterns.html  format.html  (+12 more)
(+351 files in other folders)
