[package]
name = "rust-tieng-viet-book"
version = "1.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
csv = "1.1"
polars = { version = "0.43", features = ["lazy", "parquet", "csv"] }
rayon = "1.8"
regex = "1.10"
chrono = "0.4"
lazy_static = "1.4"
async-trait = "0.1"
actix-web = "4"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
config = "0.14"
indoc = "2.0"
